<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemperatureActivity">


    <EditText
        android:id="@+id/editTextTemperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Enter"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxRoundResult"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/checkBoxRoundResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/round_result"
        app:layout_constraintTop_toBottomOf="@+id/editTextTemperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRoundResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioFahrenheitToCelsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_to_celsius"/>

        <RadioButton
            android:id="@+id/radioCelsiusToFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_to_fahrenheit"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/convert"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConvert" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="naviguerVersAccueil"
        android:text="Accueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewResult"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>