<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Tp5Activity">

<RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="MissingConstraints">

    <RadioButton
        android:id="@+id/radioConcat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/concat"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="222dp" />

    <RadioButton
        android:id="@+id/radioCalcul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculatrice"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="347dp" />

    <RadioButton
        android:id="@+id/radioMoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moyenne"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="461dp" />


</RadioGroup>




</androidx.constraintlayout.widget.ConstraintLayout>